# devnetwork-aiml-hackathon-2026

./: .dockerignore  .env.example  .env.prod.example  .gitignore  HACKATHON_DESCRIPTION.md  HACKATHON_RULES.md  PRODUCT.md  README.md  docker-compose.localtest.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/orchestrator/: Dockerfile  package.json  tsconfig.json
apps/ridgeline/: package.json  tsconfig.tsbuildinfo
apps/web/: package.json  pnpm-lock.yaml
deploy/: Caddyfile
docs/: DEVPOST.md
docs/demos/: 2026-05-25-kb-demos.md  2026-05-27-presenter-script.md  script.md
docs/plans/: 2026-05-21-argus-plan.md  2026-05-25-incident-knowledge-base.md  (+3 more)
mcp/: package.json
mcp/runbooks/: api.md  (+3 more)
scripts/: chaos-rehearsal.sh  demo-db-saturation.sh  demo-worker-oom.sh  prune-kb-droplet.txt  prune-kb.sh  prune-orch-droplet.txt  reset-kb.ts  seed-kb-verbose.sh  seed-kb.ts
services/incident-kb/: Dockerfile  README.md  pyproject.toml
services/incident-kb/src/argus_kb/: __init__.py  admin_api.py  case_graph.py  config.py  graph.py  ingest.py  main.py  mcp_server.py  ontology.py  report.py
services/incident-kb/tests/: test_case_graph_shape.py  test_ingest_bundle.py  test_ontology.py
services/mock-cluster/: Dockerfile  pyproject.toml
services/mock-cluster/src/argus_cluster/: api.py  auth.py  db_proxy.py  gateway.py  orchestrator.py  worker.py
services/mock-cluster/src/argus_cluster/common/: chaos.py  logs.py  metrics.py  state.py  traces.py
services/mock-cluster/tests/: test_chaos.py
(+86 files in other folders)
