[project]
name = "argus-kb"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "graphiti-core>=0.3.0",
  "openai>=1.40.0",
  "sentence-transformers>=3.0.0",
  "neo4j>=5.20.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
argus-kb = "argus_kb.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
