[project]
name = "argus-cluster"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "prometheus-client>=0.21.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
cluster = "argus_cluster.orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
